[tool.poetry]
name = "research-agents"
version = "0.1.0"
description = ""
authors = ["Aleksandr Bobrov <al.bobrov.mail@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
pyautogen = "^0.2.1"
langchain = "^0.0.347"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
